<resources>
    <string name="app_name">ImageClassify</string>
    <string name="top_icon">TOP ICON</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="already_have_an_account_login_now">Already have an account? Login Now</string>
</resources>